k8s/ready/KeyCloak/KeyCloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-serv
  namespace: my-bar
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: my-bar
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.2.0
          args: ["start-dev"]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mybar-key-cloak
  namespace: my-bar
spec:
  rules:
    - host: "bouncer.dvmalkin.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-serv
                port:
                  number: 8080
